apply plugin: 'java'

sourceSets.main {
	java.srcDirs = ['src/']
	resources.srcDirs = ['assets/']
}

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
	maven { url 'https://www.jitpack.io' }
}

dependencies {
	implementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
	implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
		options.compilerArgs.addAll([
				"--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
				"--add-exports", "java.base/sun.reflect.annotation=ALL-UNNAMED"
		])

		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
	}
}